 - add a 3rd param to DefaultCommand callin: the current default command
    works with the above: gadgets receive the default engine cmd,
    widgets then receive what gadgets returned (possibly engine default)
 - add  Spring.GetGlobalLos(allyTeamID) -> bool  to LuaSyncedRead
 - add  Spring.IsNoCostEnabled() -> bool  to LuaSyncedRead
 - add Spring.GetLuaMemUsage to LuaUnsyncedRead
   returns the number of (kilo-)bytes used and (kilo-)allocations performed
   by the calling Lua state individually, as well as by all states globally
 - add Spring.GetVidMemUsage to LuaUnsyncedRead
 - add Spring.Get{Unit,Feature}PieceTransformMatrices to LuaUnsyncedRead
 - add gl.GetViewRange to LuaOpenGL
 - add DrawSky and DrawSun callins; available when a map has no skybox defined
 - add DrawWater callin
 - add DrawGrass callin (enabled by /drawgrass 2; supersedes engine rendering)
 - add DrawTrees callin (enabled by /drawtrees 2; supersedes engine rendering)
 - make gl.Feature{Raw} able to draw default trees
   if drawing multiple trees in a row, use gl.Feature(treeID, true, false)
   for the *first* tree and gl.Feature(treeID, false, true) for the *last*
   [more efficient; call gl.Feature(treeID, true, true) to render a single
   tree with default state]
 ! remove the $specular named texture
 - remove gl.Light, gl.Lighting, gl.Material, gl.ShadeModel
 - remove gl.Fog, gl.FogCoord, gl.SecondaryColor
 - remove gl.PointSize, gl.PointSprite, gl.PointParameter
 - remove gl.TexEnv, gl.MultiTexEnv, gl.TexGen, gl.MultiTexGen, gl.MultiTexCoord
 - remove gl.CreateList, gl.CallList, gl.DeleteList
 - remove gl.DrawListAtUnit
 - remove gl.Shape
 - remove gl.EdgeFlag
 - remove gl.GetGlobalTex{Names,Coords}
 - remove {Unit,Feature}Rendering.{SetPieceList,SetMaterialDisplayLists}
 - remove LuaMaterial {pre,post}list handling
 - remove 'useCamera' LuaMaterial parameter
 - remove 'identities' gl.ActiveFBO argument
 - add `VFS.GAME` as a synonym to `VFS.MOD`