@@ -155,6 +155,7 @@ CALLIN_LIST = {
 	"DrawFeature",
 	"DrawShield",
 	"DrawProjectile",
+	"DrawMaterial",
 
 	"SunChanged",
 
