@@ -190,6 +190,7 @@
 	SETUP_EVENT(DrawFeature,           MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
 	SETUP_EVENT(DrawShield,            MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
 	SETUP_EVENT(DrawProjectile,        MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
+	SETUP_EVENT(DrawMaterial,          MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
 
 	// unmanaged call-ins
 	SETUP_UNMANAGED_EVENT(Shutdown, 0)
