@@ -31,12 +31,19 @@ Lua:
     widgets then receive what gadgets returned (possibly engine default)
  - add  Spring.GetGlobalLos(allyTeamID) -> bool  to LuaSyncedRead
  - add  Spring.IsNoCostEnabled() -> bool  to LuaSyncedRead
+ - add Spring.SetWind(number minStrength, number maxStrength)
+ - add Spring.SetTidal(number strength)
+ - add Spring.GetTidal
+ - add Spring.{Unit,Feature}Rendering.SetProjectileLuaDraw
  - add Spring.GetLuaMemUsage to LuaUnsyncedRead
    returns the number of (kilo-)bytes used and (kilo-)allocations performed
    by the calling Lua state individually, as well as by all states globally
  - add Spring.GetVidMemUsage to LuaUnsyncedRead
  - add Spring.Get{Unit,Feature}PieceTransformMatrices to LuaUnsyncedRead
+ - add Spring.Ping callout
+ - add Pong callin
  - add gl.GetViewRange to LuaOpenGL
+ - add DrawMaterial callin
  - add DrawSky and DrawSun callins; available when a map has no skybox defined
  - add DrawWater callin
  - add DrawGrass callin (enabled by /drawgrass 2; supersedes engine rendering)
@@ -116,6 +123,11 @@ Misc:
  - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
  - account for raw search in AICallback::GetPathLength
  - use hidden window for offscreen context rendering
+ - add /hang command
+ - add /luagccontrol command
+ - add /netping command
+ - add /netmsgsmoothing command
+ - add /distsortprojectiles command
  - add /{more,less}grass and /drawgrass commands
  - remove Basic{Sky,Water,TreeDrawer} (3DTrees is now always 1)
  - remove /DynamicSky command and keybinding
